{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 106,
  "lineage": "f2ed5d48-87a0-acae-2863-48e341867b93",
  "resources": [
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_metadata_db_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:security-group/sg-0c480cbb4c7e0c87e",
            "description": "Tecton RDS postgres security group",
            "egress": [],
            "id": "sg-0c480cbb4c7e0c87e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS worker nodes to talk to RDS postgres DB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09bbe9320cb26b7d3"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-vpc-emr-postgres_metadata_db_security",
            "name_prefix": "",
            "owner_id": "382907916572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-vpc-emr-postgres_metadata_db_security",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-postgres_metadata_db_security",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_security_groups.aws_security_group.worker_node",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tecton_eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:security-group/sg-0d0b24480587b52ad",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0b24480587b52ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow the whole world to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09bbe9320cb26b7d3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-vpc-emr",
            "name_prefix": "",
            "owner_id": "382907916572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-vpc-emr",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-emr",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:security-group/sg-09bbe9320cb26b7d3",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bbe9320cb26b7d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "35.166.5.184/32",
                  "44.235.30.101/32"
                ],
                "description": "Access from the NLB to the K8s Ingress port(s)",
                "from_port": 31080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31080
              },
              {
                "cidr_blocks": [
                  "35.166.5.184/32",
                  "44.235.30.101/32"
                ],
                "description": "Access from the NLB to the K8s Ingress port(s)",
                "from_port": 31443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31443
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0b24480587b52ad"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "dev-vpc-emr-worker-node",
            "name_prefix": "",
            "owner_id": "382907916572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-vpc-emr-worker-node",
              "kubernetes.io/cluster/dev-vpc-emr": "owned",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-worker-node",
              "kubernetes.io/cluster/dev-vpc-emr": "owned",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-node-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-535475494",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0b24480587b52ad",
            "self": false,
            "source_security_group_id": "sg-09bbe9320cb26b7d3",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_security_groups.aws_security_group.tecton_eks_cluster",
            "module.eks_security_groups.aws_security_group.worker_node",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_to_eks_ingress_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "plaintext",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.166.5.184/32",
              "44.235.30.101/32"
            ],
            "description": "Access from the NLB to the K8s Ingress port(s)",
            "from_port": 31080,
            "id": "sgrule-3389300188",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09bbe9320cb26b7d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 31080,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_security_groups.aws_security_group.worker_node",
            "module.eks_subnets.aws_eip.nat_elastic_ip",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": "tls",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "35.166.5.184/32",
              "44.235.30.101/32"
            ],
            "description": "Access from the NLB to the K8s Ingress port(s)",
            "from_port": 31443,
            "id": "sgrule-3784905414",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09bbe9320cb26b7d3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 31443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_security_groups.aws_security_group.worker_node",
            "module.eks_subnets.aws_eip.nat_elastic_ip",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public-ingress-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow the whole world to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-159145813",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d0b24480587b52ad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_security_groups.aws_security_group.tecton_eks_cluster",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-node-ingress-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3052845803",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09bbe9320cb26b7d3",
            "self": false,
            "source_security_group_id": "sg-0d0b24480587b52ad",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_security_groups.aws_security_group.tecton_eks_cluster",
            "module.eks_security_groups.aws_security_group.worker_node",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_security_groups[0]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-node-ingress-self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1384068683",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09bbe9320cb26b7d3",
            "self": false,
            "source_security_group_id": "sg-09bbe9320cb26b7d3",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks_security_groups.aws_security_group.worker_node",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb52a944f7f4c33e",
            "association_id": "eipassoc-07a4bd352ea6cd11e",
            "domain": "vpc",
            "id": "eipalloc-0eb52a944f7f4c33e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0070358fb9f4c07a3",
            "private_dns": "ip-10-64-192-5.us-west-2.compute.internal",
            "private_ip": "10.64.192.5",
            "public_dns": "ec2-35-166-5-184.us-west-2.compute.amazonaws.com",
            "public_ip": "35.166.5.184",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fe5bac7ad449999",
            "association_id": "eipassoc-0bf19b61602bbea48",
            "domain": "vpc",
            "id": "eipalloc-02fe5bac7ad449999",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c049772db9a8394a",
            "private_dns": "ip-10-64-192-30.us-west-2.compute.internal",
            "private_ip": "10.64.192.30",
            "public_dns": "ec2-44-235-30-101.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.30.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:internet-gateway/igw-00573cce0ee13bdf8",
            "id": "igw-00573cce0ee13bdf8",
            "owner_id": "382907916572",
            "tags": {
              "Name": "dev-vpc-emr-internet-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-internet-gateway"
            },
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb52a944f7f4c33e",
            "connectivity_type": "public",
            "id": "nat-0a4273fea985cd2d7",
            "network_interface_id": "eni-0070358fb9f4c07a3",
            "private_ip": "10.64.192.5",
            "public_ip": "35.166.5.184",
            "subnet_id": "subnet-0a545bacfb7e7d8f8",
            "tags": {
              "Name": "dev-vpc-emr-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-nat-gateway"
            }
          },
          "dependencies": [
            "module.eks_subnets.aws_eip.nat_elastic_ip",
            "module.eks_subnets.aws_internet_gateway.internet_gateway",
            "module.eks_subnets.aws_subnet.public_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fe5bac7ad449999",
            "connectivity_type": "public",
            "id": "nat-081458145532f3bf0",
            "network_interface_id": "eni-0c049772db9a8394a",
            "private_ip": "10.64.192.30",
            "public_ip": "44.235.30.101",
            "subnet_id": "subnet-0c417d7c5a63498af",
            "tags": {
              "Name": "dev-vpc-emr-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-nat-gateway"
            }
          },
          "dependencies": [
            "module.eks_subnets.aws_eip.nat_elastic_ip",
            "module.eks_subnets.aws_internet_gateway.internet_gateway",
            "module.eks_subnets.aws_subnet.public_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_subnet_route_to_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dd49822b6e528e451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a4273fea985cd2d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd49822b6e528e45",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_subnets.aws_eip.nat_elastic_ip",
            "module.eks_subnets.aws_internet_gateway.internet_gateway",
            "module.eks_subnets.aws_nat_gateway.nat_gateway",
            "module.eks_subnets.aws_route_table.eks_subnet_route_table",
            "module.eks_subnets.aws_subnet.public_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af8cc27b900e4af91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-081458145532f3bf0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af8cc27b900e4af9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.eks_subnets.aws_eip.nat_elastic_ip",
            "module.eks_subnets.aws_internet_gateway.internet_gateway",
            "module.eks_subnets.aws_nat_gateway.nat_gateway",
            "module.eks_subnets.aws_route_table.eks_subnet_route_table",
            "module.eks_subnets.aws_subnet.public_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:route-table/rtb-0dd49822b6e528e45",
            "id": "rtb-0dd49822b6e528e45",
            "owner_id": "382907916572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a4273fea985cd2d7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-emr-eks-subnet-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-eks-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:route-table/rtb-0af8cc27b900e4af9",
            "id": "rtb-0af8cc27b900e4af9",
            "owner_id": "382907916572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-081458145532f3bf0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-emr-eks-subnet-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-eks-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:route-table/rtb-041767f52f2503047",
            "id": "rtb-041767f52f2503047",
            "owner_id": "382907916572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00573cce0ee13bdf8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-emr-public-subnet-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-public-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_internet_gateway.internet_gateway",
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf417c397f18202a",
            "route_table_id": "rtb-0dd49822b6e528e45",
            "subnet_id": "subnet-03654ef54d73bc382"
          },
          "dependencies": [
            "module.eks_subnets.aws_route_table.eks_subnet_route_table",
            "module.eks_subnets.aws_subnet.eks_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0493d8fa95f49d826",
            "route_table_id": "rtb-0af8cc27b900e4af9",
            "subnet_id": "subnet-011146eae36d39dc1"
          },
          "dependencies": [
            "module.eks_subnets.aws_route_table.eks_subnet_route_table",
            "module.eks_subnets.aws_subnet.eks_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bb571e45c876dda",
            "route_table_id": "rtb-041767f52f2503047",
            "subnet_id": "subnet-0a545bacfb7e7d8f8"
          },
          "dependencies": [
            "module.eks_subnets.aws_internet_gateway.internet_gateway",
            "module.eks_subnets.aws_route_table.public_subnet_route_table",
            "module.eks_subnets.aws_subnet.public_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0442ea2698f785c40",
            "route_table_id": "rtb-041767f52f2503047",
            "subnet_id": "subnet-0c417d7c5a63498af"
          },
          "dependencies": [
            "module.eks_subnets.aws_internet_gateway.internet_gateway",
            "module.eks_subnets.aws_route_table.public_subnet_route_table",
            "module.eks_subnets.aws_subnet.public_subnet",
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-03654ef54d73bc382",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.64.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03654ef54d73bc382",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tecton-dev-vpc-emr-eks-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "tags_all": {
              "Name": "tecton-dev-vpc-emr-eks-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-011146eae36d39dc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.64.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011146eae36d39dc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tecton-dev-vpc-emr-eks-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "tags_all": {
              "Name": "tecton-dev-vpc-emr-eks-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-0a545bacfb7e7d8f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.64.192.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a545bacfb7e7d8f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-0c417d7c5a63498af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.64.192.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c417d7c5a63498af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc",
            "module.eks_subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:vpc/vpc-0fe5e7a79af82f3d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.64.0.0/16",
            "default_network_acl_id": "acl-02c58927c24622e6d",
            "default_route_table_id": "rtb-024fe1e4c5ae4b62e",
            "default_security_group_id": "sg-04f21789359b8d9b7",
            "dhcp_options_id": "dopt-037b8a444834a0eee",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fe5e7a79af82f3d3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-024fe1e4c5ae4b62e",
            "owner_id": "382907916572"
          }
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:vpc-endpoint/vpce-07d834c37e782d2b5",
            "cidr_blocks": [
              "52.94.28.0/23",
              "52.94.10.0/24"
            ],
            "id": "vpce-07d834c37e782d2b5",
            "owner_id": "382907916572",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-00a54069",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0af8cc27b900e4af9",
              "rtb-0dd49822b6e528e45"
            ],
            "service_name": "com.amazonaws.us-west-2.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks_subnets[0]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:vpc-endpoint/vpce-04111e008b9274683",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-04111e008b9274683",
            "owner_id": "382907916572",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0af8cc27b900e4af9",
              "rtb-0dd49822b6e528e45"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0fe5e7a79af82f3d3"
          },
          "dependencies": [
            "module.eks_subnets.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:security-group/sg-0b6dad9194894ec67",
            "description": "A security group that EMR clusters created by Tecton will use to communicate internally",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow full egress for emr to pull pip packages and send metrics",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6dad9194894ec67",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ingress from emr-service-sg to emr-sg on 8443",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00a3cf92e76a04a56"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "tecton-emr-security-group",
            "name_prefix": "",
            "owner_id": "382907916572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tecton-emr-security-group",
              "tecton-accessible:dev-vpc-emr": "true",
              "tecton-security-group-emr-usage": "master,core\u0026task"
            },
            "tags_all": {
              "Name": "tecton-emr-security-group",
              "tecton-accessible:dev-vpc-emr": "true",
              "tecton-security-group-emr-usage": "master,core\u0026task"
            },
            "timeouts": null,
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:security-group/sg-00a3cf92e76a04a56",
            "description": "A security group that EMR clusters created by Tecton will use to communicate with EMR services",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow egress from emr-service-sg to emr-sg on 8443",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6dad9194894ec67"
                ],
                "self": false,
                "to_port": 8443
              }
            ],
            "id": "sg-00a3cf92e76a04a56",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ingress from emr-sg to emr-service-sg on 9443",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6dad9194894ec67"
                ],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "tecton-service-emr-security-group",
            "name_prefix": "",
            "owner_id": "382907916572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tecton-service-emr-security-group",
              "tecton-accessible:dev-vpc-emr": "true",
              "tecton-security-group-emr-usage": "service-access"
            },
            "tags_all": {
              "Name": "tecton-service-emr-security-group",
              "tecton-accessible:dev-vpc-emr": "true",
              "tecton-security-group-emr-usage": "service-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr_security_group_full_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow full egress for emr to pull pip packages and send metrics",
            "from_port": 0,
            "id": "sgrule-3646160086",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b6dad9194894ec67",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.emr_security_group",
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr_security_group_self_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-2575415278",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b6dad9194894ec67",
            "self": false,
            "source_security_group_id": "sg-0b6dad9194894ec67",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.emr_security_group",
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr_security_group_service_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow ingress from emr-service-sg to emr-sg on 8443",
            "from_port": 8443,
            "id": "sgrule-1364296788",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b6dad9194894ec67",
            "self": false,
            "source_security_group_id": "sg-00a3cf92e76a04a56",
            "to_port": 8443,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.emr_security_group",
            "module.security_groups.aws_security_group.emr_service_security_group",
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr_service_security_group_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow egress from emr-service-sg to emr-sg on 8443",
            "from_port": 8443,
            "id": "sgrule-3299964503",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a3cf92e76a04a56",
            "self": false,
            "source_security_group_id": "sg-0b6dad9194894ec67",
            "to_port": 8443,
            "type": "egress"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.emr_security_group",
            "module.security_groups.aws_security_group.emr_service_security_group",
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "emr_service_security_group_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow ingress from emr-sg to emr-service-sg on 9443",
            "from_port": 9443,
            "id": "sgrule-3128109877",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00a3cf92e76a04a56",
            "self": false,
            "source_security_group_id": "sg-0b6dad9194894ec67",
            "to_port": 9443,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.emr_security_group",
            "module.security_groups.aws_security_group.emr_service_security_group",
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e48fe32865ffba3",
            "association_id": "eipassoc-0facfea99556cd998",
            "domain": "vpc",
            "id": "eipalloc-02e48fe32865ffba3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0df153a8fed55243a",
            "private_dns": "ip-10-38-192-9.us-west-2.compute.internal",
            "private_ip": "10.38.192.9",
            "public_dns": "ec2-54-189-81-197.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.81.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bf1182f4ea7c55e",
            "association_id": "eipassoc-079fde2ac844af30f",
            "domain": "vpc",
            "id": "eipalloc-07bf1182f4ea7c55e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c1a0b42d787e4b62",
            "private_dns": "ip-10-38-192-27.us-west-2.compute.internal",
            "private_ip": "10.38.192.27",
            "public_dns": "ec2-34-214-23-152.us-west-2.compute.amazonaws.com",
            "public_ip": "34.214.23.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:internet-gateway/igw-032cc562a9794e0a4",
            "id": "igw-032cc562a9794e0a4",
            "owner_id": "382907916572",
            "tags": {
              "Name": "dev-vpc-emr-internet-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-internet-gateway"
            },
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e48fe32865ffba3",
            "connectivity_type": "public",
            "id": "nat-090aeb5c63b4b2b0b",
            "network_interface_id": "eni-0df153a8fed55243a",
            "private_ip": "10.38.192.9",
            "public_ip": "54.189.81.197",
            "subnet_id": "subnet-01ba6e2a8350c9ecb",
            "tags": {
              "Name": "dev-vpc-emr-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-nat-gateway"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.nat_elastic_ip",
            "module.subnets.aws_internet_gateway.internet_gateway",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bf1182f4ea7c55e",
            "connectivity_type": "public",
            "id": "nat-0af73918e777ba06c",
            "network_interface_id": "eni-0c1a0b42d787e4b62",
            "private_ip": "10.38.192.27",
            "public_ip": "34.214.23.152",
            "subnet_id": "subnet-090a63f6b9e543971",
            "tags": {
              "Name": "dev-vpc-emr-nat-gateway"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-nat-gateway"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.nat_elastic_ip",
            "module.subnets.aws_internet_gateway.internet_gateway",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "emr_subnet_route_to_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0408e6ca6b2b6fe8a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-090aeb5c63b4b2b0b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0408e6ca6b2b6fe8a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_eip.nat_elastic_ip",
            "module.subnets.aws_internet_gateway.internet_gateway",
            "module.subnets.aws_nat_gateway.nat_gateway",
            "module.subnets.aws_route_table.emr_subnet_route_table",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01279082ca37403ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0af73918e777ba06c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01279082ca37403ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_eip.nat_elastic_ip",
            "module.subnets.aws_internet_gateway.internet_gateway",
            "module.subnets.aws_nat_gateway.nat_gateway",
            "module.subnets.aws_route_table.emr_subnet_route_table",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "emr_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:route-table/rtb-0408e6ca6b2b6fe8a",
            "id": "rtb-0408e6ca6b2b6fe8a",
            "owner_id": "382907916572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-090aeb5c63b4b2b0b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-emr-emr-subnet-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-emr-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:route-table/rtb-01279082ca37403ca",
            "id": "rtb-01279082ca37403ca",
            "owner_id": "382907916572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af73918e777ba06c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-emr-emr-subnet-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-emr-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:route-table/rtb-0956beb812f5415cf",
            "id": "rtb-0956beb812f5415cf",
            "owner_id": "382907916572",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032cc562a9794e0a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-emr-public-subnet-route-table"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-public-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.internet_gateway",
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "emr_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0127f954d41999c59",
            "route_table_id": "rtb-0408e6ca6b2b6fe8a",
            "subnet_id": "subnet-04668feee5cd32559"
          },
          "dependencies": [
            "module.subnets.aws_route_table.emr_subnet_route_table",
            "module.subnets.aws_subnet.emr_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06afa17aad62abea9",
            "route_table_id": "rtb-01279082ca37403ca",
            "subnet_id": "subnet-0728770982c77822c"
          },
          "dependencies": [
            "module.subnets.aws_route_table.emr_subnet_route_table",
            "module.subnets.aws_subnet.emr_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c7ecccb73565f41",
            "route_table_id": "rtb-0956beb812f5415cf",
            "subnet_id": "subnet-01ba6e2a8350c9ecb"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.internet_gateway",
            "module.subnets.aws_route_table.public_subnet_route_table",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9c32bc60e592239",
            "route_table_id": "rtb-0956beb812f5415cf",
            "subnet_id": "subnet-090a63f6b9e543971"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.internet_gateway",
            "module.subnets.aws_route_table.public_subnet_route_table",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "emr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-04668feee5cd32559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.38.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04668feee5cd32559",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-emr-tecton-emr-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-tecton-emr-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-0728770982c77822c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.38.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0728770982c77822c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-emr-tecton-emr-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-tecton-emr-subnet",
              "tecton-accessible:dev-vpc-emr": "true"
            },
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-01ba6e2a8350c9ecb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.38.192.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ba6e2a8350c9ecb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:subnet/subnet-090a63f6b9e543971",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.38.192.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a63f6b9e543971",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "382907916572",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "tags_all": {
              "Name": "dev-vpc-emr-public-subnet"
            },
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc",
            "module.subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "emr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:vpc/vpc-075bb715fc5ef6526",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.38.0.0/16",
            "default_network_acl_id": "acl-01f1b8aded98558ba",
            "default_route_table_id": "rtb-0bae62f0cfe995315",
            "default_security_group_id": "sg-059480e620ac85157",
            "dhcp_options_id": "dopt-037b8a444834a0eee",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-075bb715fc5ef6526",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bae62f0cfe995315",
            "owner_id": "382907916572"
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:vpc-endpoint/vpce-0f7b87f49c0d989a5",
            "cidr_blocks": [
              "52.94.28.0/23",
              "52.94.10.0/24"
            ],
            "id": "vpce-0f7b87f49c0d989a5",
            "owner_id": "382907916572",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-00a54069",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01279082ca37403ca",
              "rtb-0408e6ca6b2b6fe8a"
            ],
            "service_name": "com.amazonaws.us-west-2.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:382907916572:vpc-endpoint/vpce-03673a5d4295c962f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-03673a5d4295c962f",
            "owner_id": "382907916572",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01279082ca37403ca",
              "rtb-0408e6ca6b2b6fe8a"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-075bb715fc5ef6526"
          },
          "dependencies": [
            "module.subnets.aws_vpc.emr_vpc"
          ]
        }
      ]
    }
  ]
}